--- a/package.json
+++ b/package.json
@@ -14,8 +14,20 @@
     "reset:ios": "npm run clean:ios && npm install && cd ios && bundle install && bundle exec pod install && cd .."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@reduxjs/toolkit": "^2.6.1",
+    "@tanstack/react-query": "^5.69.0",
+    "axios": "^1.8.3",
+    "date-fns": "^4.1.0",
     "react": "19.0.0",
-    "react-native": "0.78.0"
+    "react-native": "0.78.0",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-reanimated": "^3.17.1",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.9.2",
+    "react-native-svg": "^15.11.2",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -28,13 +40,20 @@
     "@react-native/eslint-config": "0.78.0",
     "@react-native/metro-config": "0.78.0",
     "@react-native/typescript-config": "0.78.0",
+    "@redux-devtools/extension": "^3.3.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
     "@types/react-test-renderer": "^19.0.0",
+    "@types/redux-mock-store": "^1.5.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "jest-mock-axios": "^4.8.0",
+    "msw": "^2.7.3",
     "prettier": "2.8.8",
     "react-test-renderer": "19.0.0",
+    "redux-mock-store": "^1.5.5",
     "typescript": "5.0.4"
   },
   "engines": {
