--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "date-fns": "^4.1.0",
     "react": "19.0.0",
     "react-native": "0.78.0",
-    "react-native-chart-kit": "^6.12.0",
+    "react-native-gifted-charts": "^1.4.58",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
